--- a/package.json
+++ b/package.json
@@ -3,12 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "license": "MIT",
-  "keywords": [
-    "pipe",
-    "operator",
-    "elixir",
-    "functional"
-  ],
+  "keywords": ["pipe", "operator", "elixir", "functional"],
   "author": "Henrique Artur <contato@henriqueartur.com>",
   "contributors": [],
   "repository": {
@@ -18,7 +13,8 @@
   "packageManager": "pnpm@10.5.2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "biome check --fix --unsafe",
+    "lint:ci": "biome check"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
