💚 change publish `commit` step to use `GITHUB_TOKEN`

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -99,11 +99,11 @@ jobs:
 
       - name: Commit and Push Version Bump
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/HenriqueArtur/PipeLikeElixir.git
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/HenriqueArtur/PipeLikeElixir.git
           git diff --quiet && echo "No changes to commit" || (git add . && git commit -m "🔖 v${{ env.new_version }} [skip ci]" && git push)
 
   publish:
