👷 fix `pnpm i` on `auto-version`

--- a/.github/workflows/auto-version.yaml
+++ b/.github/workflows/auto-version.yaml
@@ -48,6 +48,25 @@ jobs:
             echo "needs_bump=false" >> $GITHUB_ENV
           fi
 
+      - name: Get pnpm store directory
+        if: env.needs_bump == 'true'
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+      - uses: actions/cache@v4
+        name: Setup pnpm cache
+        if: env.needs_bump == 'true'
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        if: env.needs_bump == 'true'
+        run: pnpm install
+
       - name: Bump Version & Commit Changes
         if: env.needs_bump == 'true'
         env:
