--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -51,7 +51,7 @@ jobs:
   publish:
     name: Build & Publish
     runs-on: ubuntu-latest
-    needs: release  # Runs only if versioning is successful
+    needs: test  # Runs only if testing is successful
     timeout-minutes: 2
     steps:
       - name: Checkout code
