--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "husky": "^9.1.7",
     "npm-check-updates": "^17.1.15",
     "rollup": "^4.34.9",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.1.1",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
