--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   },
   "packageManager": "pnpm@10.5.2",
   "type": "module",
-  "main": "dist/index.mjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "index.mjs",
+  "module": "index.mjs",
+  "types": "index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.mjs"
+      "import": "./index.mjs",
+      "types": "./index.d.ts",
+      "default": "./index.mjs"
     },
     "./*": {
-      "import": "./dist/*.mjs",
-      "types": "./dist/*.d.ts"
+      "import": "./*.mjs",
+      "types": "./*.d.ts"
     }
   },
   "scripts": {
