💚 split `.npmrc` to `whoami`

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -90,10 +90,15 @@ jobs:
       - name: Build Library
         run: pnpm run build
 
-      - name: Check npm whoami
+      
+      - name: Create .npmrc file
         run: |
-          echo "//registry.npmjs.org/:_authToken=\${NODE_AUTH_TOKEN}" > ~/.npmrc
-          npm whoami
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Verify npm Authentication
+        run: npm whoami
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
