--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   test:
@@ -18,6 +23,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '22'
+          registry-url: 'https://registry.npmjs.org/'
+          cache: 'pnpm'
 
       - uses: pnpm/action-setup@v4
         name: Install pnpm
@@ -62,6 +69,7 @@ jobs:
         with:
           node-version: '22'
           registry-url: 'https://registry.npmjs.org'
+          cache: 'pnpm'
           always-auth: true
 
       - uses: pnpm/action-setup@v4
@@ -90,22 +98,20 @@ jobs:
       - name: Build Library
         run: pnpm run build
 
-      
-      - name: Create .npmrc file
-        run: |
-          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+      - name: Set npm authentication
+        run: pnpm config set //registry.npmjs.org/:_authToken $NODE_AUTH_TOKEN
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Verify npm Authentication
         run: npm whoami
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish to npm
         run: pnpm publish dist --no-git-checks --access public
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NPM_CONFIG_USERCONFIG: $HOME/.npmrc
 
       - name: Create GitHub Release
