--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -96,22 +96,21 @@ jobs:
         run: pnpm run build
 
       - name: Set npm authentication
-        run: pnpm config set //registry.npmjs.org/:_authToken $NODE_AUTH_TOKEN
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Create .npmrc file
-        run: |
-          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
-          cat ~/.npmrc
+      - name: Verify npm Authentication
+        run: npm whoami
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish to npm
-        run: pnpm publish dist --no-git-checks --access public
+        run: npm publish --access public
+        working-directory: dist
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NPM_CONFIG_USERCONFIG: $HOME/.npmrc
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
