--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,10 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": []
+    "ignore": [
+      "./dist/*",
+      "./**/dist/*"
+    ]
   },
   "formatter": {
     "enabled": true,
