--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -40,7 +40,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: 📥 Install dependencies
-        run: pnpm install
+        run: pnpm install --filter=@cano-ts/core
 
       - name: ✅ Run tests build
         run: pnpm run test:build
