--- a/.github/workflows/type-safe.yaml
+++ b/.github/workflows/type-safe.yaml
@@ -40,7 +40,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: 📥 Install dependencies
-        run: pnpm install
+        run: pnpm install --filter=@cano-ts/core
 
       - name: 🏷️ Test Types
         run: pnpm run test:type
