--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "test": "pnpm run --filter=@cano-ts/core test",
     "test:build": "pnpm run --filter=@cano-ts/core test:build",
     "test:ci": "pnpm run --filter=@cano-ts/core test:ci",
+    "test:integration": "pnpm run prepare:test-app && cd packages/test-app && pnpm run test",
     "test:type": "pnpm run --filter=@cano-ts/core test:type"
   },
   "devDependencies": {
