🐛 fix `test:integration`

--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,8 @@
     "ignoreUnknown": false,
     "ignore": [
       "./dist/*",
-      "./**/dist/*"
+      "./**/dist/*",
+      "./**/cano-ts/*"
     ]
   },
   "formatter": {
