--- a/.github/workflows/auto-version.yaml
+++ b/.github/workflows/auto-version.yaml
@@ -37,10 +37,13 @@ jobs:
           CURRENT_VERSION=$(jq -r .version ./packages/core/package.json)
           echo "current_version=$CURRENT_VERSION" >> $GITHUB_ENV
 
+      - name: 🛠️ Install semver (using pnpm)
+        run: pnpm add -g semver
+
       - name: 🔍 Compare Versions
         id: compare_versions
         run: |
-          if [ "$(printf '%s\n' "$latest_version" "$current_version" | sort -V | head -n1)" != "$latest_version" ]; then
+          if [[ $(semver compare "$latest_version" "$current_version") -le 0 ]]; then
             echo "needs_bump=true" >> $GITHUB_ENV
           else
             echo "needs_bump=false" >> $GITHUB_ENV
