👷 trigger `workflow` after `auto-version`

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,8 +1,9 @@
 name: 🚨 Lint
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  workflow_dispatch:
+    inputs:
+      trigger:
 
 jobs:
   lint:
