--- a/.github/workflows/type-safe.yaml
+++ b/.github/workflows/type-safe.yaml
@@ -1,8 +1,9 @@
 name: 🏷️ Type safe
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  workflow_dispatch:
+    inputs:
+      trigger:
 
 jobs:
   type-safe:
