--- a/.github/workflows/auto-version.yaml
+++ b/.github/workflows/auto-version.yaml
@@ -109,6 +109,7 @@ jobs:
   trigger:
     runs-on: ubuntu-latest
     timeout-minutes: 1
+    needs: auto-version
     steps:
       - name: 🤡 Trigger integration tests
         run: |
