💚 add `` to `workflows` test

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -2,7 +2,7 @@ name: 🤡 Integration Tests
 
 on:
   workflow_run:
-    workflows: [🔖 Auto Version in PR Branch]
+    workflows: ["🔖 Auto Version in PR Branch"]
     types:
       - completed
 
