💚 fix `ref` from `auto-version`

--- a/.github/workflows/auto-version.yaml
+++ b/.github/workflows/auto-version.yaml
@@ -124,6 +124,6 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 workflow_id: workflow,
-                ref: context.ref
+                ref: "${{ github.head_ref }}"
               });
             }
