--- a/.github/workflows/auto-version.yaml
+++ b/.github/workflows/auto-version.yaml
@@ -5,10 +5,6 @@ on:
     branches:
       - main
 
-permissions:
-  actions: write
-  workflow: write
-
 jobs:
   auto-version:
     runs-on: ubuntu-latest
@@ -113,7 +109,7 @@ jobs:
       - name: 🔫 Trigger Dependent Workflows
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_PAT }}
           script: |
             const workflows = [
               "integration-tests.yaml",
