--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -1,7 +1,10 @@
 name: 🤡 Integration Tests
 
 on:
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+
 
 jobs:
   integration-tests:
