--- a/package.json
+++ b/package.json
@@ -46,8 +46,9 @@
     "test:integration": "pnpm run prepare:test-app && pnpm run test:test-app",
     "test:test-app": "tsx ./scripts/run-tests-in-test-app.ts",
     "test:type": "pnpm run --filter=@cano-ts/core test:type",
-    "update:root:version": "tsx ./scripts/update-global-version.ts",
-    "version": "pnpm changeset"
+    "update:version": "tsx ./scripts/update-global-version.ts",
+    "version": "pnpm changeset version && pnpm run update:version",
+    "version:description": "pnpm changeset"
   },
   "devDependencies": {
     "@biomejs/biome": "catalog:",
