--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "catalog:",
     "husky": "catalog:",
     "tsx": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitepress": "^1.6.3"
   }
 }
