--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "keywords": ["pipe", "operator", "elixir", "functional", "typescript"],
   "author": "Henrique Artur <contato@henriqueartur.com>",
-  "contributors": [],
   "repository": {
     "type": "git",
     "url": "https://github.com/HenriqueArtur/cano-ts"
   },
+  "homepage": "https://henriqueartur.github.io/cano-ts/",
   "packageManager": "pnpm@10.5.2",
   "type": "module",
   "main": "index.mjs",
