--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,21 +1,13 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "disableSizeLimit": true,
-    "isolatedModules": true,
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "target": "es2022",
-    "types": ["node"],
-    "baseUrl": "./src",
+    "outDir": "./dist",
     "rootDir": "./src",
-    "strictNullChecks": true,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "baseUrl": "./src",
+    "composite": true,
+    "declaration": true,
+    "declarationMap": true
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "./**.ts", "**/**.config.ts"]
+  "exclude": ["node_modules", "dist", "test", "**/*.config.ts"]
 }
