--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,13 +1,21 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "disableSizeLimit": true,
+    "isolatedModules": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "target": "es2022",
+    "types": ["node"],
     "baseUrl": "./src",
-    "composite": true,
-    "declaration": true,
-    "declarationMap": true
+    "rootDir": "./src",
+    "strictNullChecks": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "dist", "test", "**/*.config.ts"]
+  "exclude": ["node_modules", "./**.ts", "**/**.config.ts"]
 }
