--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "disableSizeLimit": true,
@@ -9,16 +8,14 @@
     "moduleResolution": "Bundler",
     "target": "es2022",
     "types": ["node"],
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "composite": true,
-    "incremental": true
+    "baseUrl": "./src",
+    "rootDir": "./src",
+    "strictNullChecks": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
   },
-  "references": [
-    { "path": "./packages/core" },
-    { "path": "./packages/test-app" }
-  ],
-  "files": [],
-  "exclude": ["node_modules", "dist"]
+  "include": ["./src/**/*.ts"],
+  "exclude": ["node_modules", "./**.ts", "**/**.config.ts"]
 }
