--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,14 @@
     "moduleResolution": "Bundler",
     "target": "es2022",
     "types": ["node"],
-    "baseUrl": "./src",
-    "rootDir": "./src",
+    "baseUrl": "./",
+    "rootDir": "./",
     "strictNullChecks": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./packages/*/src/**/*.ts", "./packages/*/test/**/*.ts"],
   "exclude": ["node_modules", "./**.ts", "**/**.config.ts"]
 }
