💚 install all dependencies for testing

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -40,7 +40,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
 
       - name: 📥 Install dependencies
-        run: pnpm install --filter=@cano-ts/core
+        run: pnpm i
 
       - name: 🤡 Run tests
         run: pnpm run test:integration
